# briefcase-toga-button-demo-app

./: .gitignore  LICENSE  pyproject.toml
src/helloworld/: __main__.py  app.py
src/helloworld.dist-info/: METADATA
